--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
         <div class="nav-container">
             <a href="index.html" class="nav-logo" aria-label="Go to Home Page">Bayou Websites</a>
             <ul class="nav-menu">
-                <li class="nav-item active"><a href="index.html" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="index.html" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="about.html">About</a></li>
                 <li class="nav-item"><a href="services.html">Services</a></li>
                 <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
+                <li class="nav-item active"><a href="contact.html">Contact</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false"></button>
         </div>
@@ -43,7 +43,7 @@
 
     <header class="hero" role="banner">
         <div class="hero-content fade-in">
-            <h1 class="hero-title">Contact Us</h1>
+            <h1 class="hero-title">Contact</h1>
             <a href="contact.html" class="hero-cta">Get Started</a>
         </div>
     </header>
@@ -75,27 +75,19 @@
         <dl class="faq-list">
         <div class="faq-item">
           <dt class="faq-question">What services do you offer?</dt>
-          <dd class="faq-answer">We specialize in web design, development, and maintenance for blue-collar businesses in Louisiana.</dd>
+          <dd class="faq-answer">We specialize in web design, development, and maintenance for blue-collar businesses within the United States.</dd>
         </div>
         <div class="faq-item">
           <dt class="faq-question">How can I get a quote?</dt>
-          <dd class="faq-answer">You can fill out the contact form above or call us directly at +1 (234) 567-890 to discuss your project.</dd>
+          <dd class="faq-answer">You can fill out the contact form.</dd>
         </div>
         <div class="faq-item">
           <dt class="faq-question">Do you offer ongoing support?</dt>
-          <dd class="faq-answer">Yes, we provide maintenance and support packages to ensure your website stays up-to-date and secure.</dd>
+          <dd class="faq-answer">Yes, we provide monthly support.</dd>
         </div>
         <div class="faq-item">
           <dt class="faq-question">How long does it take to build a website?</dt>
           <dd class="faq-answer">The timeline depends on the complexity of the project, but most websites are completed within 4-6 weeks.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Can you redesign my existing website?</dt>
-          <dd class="faq-answer">Absolutely! We can revamp your current website to improve its design, functionality, and performance.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Do you provide hosting services?</dt>
-          <dd class="faq-answer">Yes, we offer reliable hosting solutions tailored to your website's needs.</dd>
         </div>
         <div class="faq-item">
           <dt class="faq-question">Will my website be mobile-friendly?</dt>
@@ -107,70 +99,42 @@
         </div>
         <div class="faq-item">
           <dt class="faq-question">What industries do you serve?</dt>
-          <dd class="faq-answer">We primarily serve blue-collar businesses, including construction, plumbing, electrical, and more.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Do you offer e-commerce solutions?</dt>
-          <dd class="faq-answer">Yes, we can build e-commerce websites with secure payment gateways and user-friendly interfaces.</dd>
+          <dd class="faq-answer">We serve blue-collar businesses, including construction, plumbing, electrical, and more.</dd>
         </div>
         <div class="faq-item">
           <dt class="faq-question">What if I need changes after the website is live?</dt>
           <dd class="faq-answer">We offer post-launch support and maintenance to handle updates and changes as needed.</dd>
         </div>
         <div class="faq-item">
-          <dt class="faq-question">Do you provide content creation services?</dt>
-          <dd class="faq-answer">Yes, we can assist with creating high-quality content for your website, including text, images, and videos.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">How do I track my website's performance?</dt>
-          <dd class="faq-answer">We can integrate analytics tools like Google Analytics to help you monitor your website's performance.</dd>
-        </div>
-        <div class="faq-item">
           <dt class="faq-question">What payment methods do you accept?</dt>
-          <dd class="faq-answer">We accept various payment methods, including credit cards, bank transfers, and online payment platforms.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Can you integrate third-party tools into my website?</dt>
-          <dd class="faq-answer">Yes, we can integrate tools like CRMs, booking systems, and social media platforms into your website.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Do you offer training on how to manage my website?</dt>
-          <dd class="faq-answer">Yes, we provide training sessions to help you manage and update your website independently.</dd>
+          <dd class="faq-answer">We accept Venmo, Stripe, and Paypal. Fees will be added to the price.</dd>
         </div>
         <div class="faq-item">
           <dt class="faq-question">What security measures do you implement?</dt>
           <dd class="faq-answer">We implement SSL certificates, regular updates, and other security measures to protect your website.</dd>
-        </div>
-        <div class="faq-item">
-          <dt class="faq-question">Can you help with social media integration?</dt>
-          <dd class="faq-answer">Yes, we can integrate your social media accounts into your website for seamless sharing and engagement.</dd>
         </div>
         </dl>
       </div>
     </section>
 
     <footer class="footer" role="contentinfo">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <h2>Bayou Websites</h2>
-                <p>Web Development for Blue Collar Businesses</p>
-            </div>
-            <nav class="footer-links" aria-label="Footer Navigation">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-            <div class="footer-contact-info">
-                <p>Email: <a href="mailto:info@bayouwebsites.com" aria-label="Email us at info@bayouwebsites.com">info@bayouwebsites.com</a></p>
-                <p>Phone: <a href="tel:+1234567890" aria-label="Call us at +1 (234) 567-890">+1 (234) 567-890</a></p>
-            </div>
-            <div class="footer-copyright">
-                <p>&copy; 2025 Bayou Websites. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+      <div class="footer-content">
+          <div class="footer-logo">
+              <h2>Bayou Websites</h2>
+              <p>Web Development for Blue Collar Businesses</p>
+          </div>
+          <nav class="footer-links" aria-label="Footer Navigation">
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="services.html">Services</a>
+              <a href="portfolio.html">Portfolio</a>
+              <a href="contact.html">Contact</a>
+          </nav>
+          <div class="footer-copyright">
+              <p>&copy; 2025 Bayou Websites. All rights reserved.</p>
+          </div>
+      </div>
+  </footer>
 
     <link rel="stylesheet" href="./css/contact.css">
     <style>
