--- a/portfolio.html
+++ b/portfolio.html
@@ -50,67 +50,130 @@
 
     <main>
         <section id="portfolio" class="portfolio-section" aria-labelledby="portfolio-heading">
-          <div class="container">
-            <h2 id="portfolio-heading" class="section-title">Our Featured Projects</h2>
-            <p class="portfolio-intro">Explore a selection of our recent web development projects, showcasing our expertise in creating impactful online solutions for diverse clients.</p>
-            <ul class="portfolio-grid">
-              <li class="portfolio-item">
-                <a href="project-ironwood.html" class="portfolio-link">
-                  <img src="./images/LongHaul.gif" alt="Ironwood Carriers website screenshot" class="portfolio-image">
-                  <div class="portfolio-overlay">
-                    <h3 class="portfolio-title">Ironwood Carriers</h3>
-                    <p class="portfolio-description">Developed a robust website for a long-haul trucking company, improving their online presence and streamlining client communication. Integrated a custom tracking system for real-time shipment updates.</p>
-                    <span class="portfolio-tech">Technologies: HTML5, CSS3, JavaScript, PHP</span>
-                  </div>
-                </a>
-              </li>
-              <li class="portfolio-item">
-                <a href="project-wacarparts.html" class="portfolio-link">
-                  <img src="./images/Wa carparts.gif" alt="WA Car Parts e-commerce platform screenshot" class="portfolio-image">
-                  <div class="portfolio-overlay">
-                    <h3 class="portfolio-title">WA Car Parts</h3>
-                    <p class="portfolio-description">Designed and built an e-commerce platform for automotive parts, significantly boosting sales and expanding customer reach. Implemented a user-friendly interface and secure payment gateway.</p>
-                    <span class="portfolio-tech">Technologies: React, Node.js, MongoDB, Stripe API</span>
-                  </div>
-                </a>
-              </li>
-              <li class="portfolio-item">
-                <a href="project-spiritracing.html" class="portfolio-link">
-                  <img src="./images/SpiritRacingTeam.gif" alt="Spirit Racing Team dynamic website screenshot" class="portfolio-image">
-                  <div class="portfolio-overlay">
-                    <h3 class="portfolio-title">Spirit Racing Team</h3>
-                    <p class="portfolio-description">Created a dynamic website for a racing team, featuring an interactive event calendar and sponsorship highlights. Enhanced fan engagement and team visibility through social media integration.</p>
-                    <span class="portfolio-tech">Technologies: Angular, Firebase, Cloud Functions</span>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
+            <div class="container">
+                <h2 id="portfolio-heading" class="section-title">Our Growing Portfolio</h2>
+                <p class="portfolio-intro">Explore a selection of our recent web development projects, showcasing our expertise in creating impactful online solutions for diverse clients.</p>
+                <ul class="portfolio-grid">
+                    <li class="portfolio-item">
+                        <a href="project-ironwood.html" class="portfolio-link">
+                            <img src="./images/LongHaul.gif" alt="Ironwood Carriers website screenshot" class="portfolio-image">
+                            <div class="portfolio-overlay">
+                                <h3 class="portfolio-title">Ironwood Carriers</h3>
+                                <p class="portfolio-description">Developed a robust website for a long-haul trucking company, improving their online presence and streamlining client communication. Integrated a custom tracking system for real-time shipment updates.</p>
+                                <span class="portfolio-tech">Technologies: HTML5, CSS3, JavaScript, PHP</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href="project-wacarparts.html" class="portfolio-link">
+                            <img src="./images/Wa carparts.gif" alt="WA Car Parts e-commerce platform screenshot" class="portfolio-image">
+                            <div class="portfolio-overlay">
+                                <h3 class="portfolio-title">WA Car Parts</h3>
+                                <p class="portfolio-description">Designed and built an e-commerce platform for automotive parts, significantly boosting sales and expanding customer reach. Implemented a user-friendly interface and secure payment gateway.</p>
+                                <span class="portfolio-tech">Technologies: React, Node.js, MongoDB, Stripe API</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href="project-spiritracing.html" class="portfolio-link">
+                            <img src="./images/SpiritRacingTeam.gif" alt="Spirit Racing Team dynamic website screenshot" class="portfolio-image">
+                            <div class="portfolio-overlay">
+                                <h3 class="portfolio-title">Spirit Racing Team</h3>
+                                <p class="portfolio-description">Created a dynamic website for a racing team, featuring an interactive event calendar and sponsorship highlights. Enhanced fan engagement and team visibility through social media integration.</p>
+                                <span class="portfolio-tech">Technologies: Angular, Firebase, Cloud Functions</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
-      </main>
+
+        <!-- Our Process Section -->
+        <section id="our-process" class="our-process" aria-labelledby="process-heading">
+            <div class="container">
+                <h2 id="process-heading" class="section-title">Our Process</h2>
+                <p>We follow a structured approach to ensure every project is delivered with precision and excellence.</p>
+                <div class="process-steps">
+                    <div class="process-step">
+                        <div class="step-icon">
+                            <img src="https://img.icons8.com/ios-filled/50/000000/idea.png" alt="Planning icon">
+                        </div>
+                        <div class="step-content">
+                            <h3 class="step-title">Planning</h3>
+                            <p class="step-description">We start by understanding your business goals and creating a roadmap for success.</p>
+                        </div>
+                    </div>
+                    <div class="process-step">
+                        <div class="step-icon">
+                            <img src="https://img.icons8.com/ios-filled/50/000000/design.png" alt="Design icon">
+                        </div>
+                        <div class="step-content">
+                            <h3 class="step-title">Design</h3>
+                            <p class="step-description">Our team crafts visually stunning and user-friendly designs tailored to your brand.</p>
+                        </div>
+                    </div>
+                    <div class="process-step">
+                        <div class="step-icon">
+                            <img src="https://img.icons8.com/ios-filled/50/000000/code.png" alt="Development icon">
+                        </div>
+                        <div class="step-content">
+                            <h3 class="step-title">Development</h3>
+                            <p class="step-description">We bring your vision to life with clean, efficient, and scalable code.</p>
+                        </div>
+                    </div>
+                    <div class="process-step">
+                        <div class="step-icon">
+                            <img src="https://img.icons8.com/ios-filled/50/000000/rocket.png" alt="Launch icon">
+                        </div>
+                        <div class="step-content">
+                            <h3 class="step-title">Launch</h3>
+                            <p class="step-description">After rigorous testing, we launch your website and ensure everything runs smoothly.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Client Testimonials Section -->
+        <section id="testimonials" class="testimonials" aria-labelledby="testimonials-heading">
+            <div class="container">
+                <h2 id="testimonials-heading" class="section-title">What Our Clients Say</h2>
+                <div class="testimonial-slider">
+                    <div class="testimonial">
+                        <p>"Bayou Websites transformed our online presence. Their team was professional, creative, and delivered beyond our expectations."</p>
+                        <cite>- John Doe, Ironwood Carriers</cite>
+                    </div>
+                    <div class="testimonial">
+                        <p>"The e-commerce platform they built for us has been a game-changer. Our sales have skyrocketed, and our customers love the new interface."</p>
+                        <cite>- Jane Smith, WA Car Parts</cite>
+                    </div>
+                    <div class="testimonial">
+                        <p>"Working with Bayou Websites was a fantastic experience. They understood our needs and created a website that truly represents our brand."</p>
+                        <cite>- Mike Johnson, Spirit Racing Team</cite>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
       
     <footer class="footer" role="contentinfo">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <h2>Bayou Websites</h2>
-                <p>Web Development for Blue Collar Businesses</p>
-            </div>
-            <nav class="footer-links" aria-label="Footer Navigation">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-            <div class="footer-contact-info">
-                <p>Email: <a href="mailto:info@bayouwebsites.com" aria-label="Email us at info@bayouwebsites.com">info@bayouwebsites.com</a></p>
-                <p>Phone: <a href="tel:+1234567890" aria-label="Call us at +1 (234) 567-890">+1 (234) 567-890</a></p>
-            </div>
-            <div class="footer-copyright">
-                <p>&copy; 2025 Bayou Websites. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+      <div class="footer-content">
+          <div class="footer-logo">
+              <h2>Bayou Websites</h2>
+              <p>Web Development for Blue Collar Businesses</p>
+          </div>
+          <nav class="footer-links" aria-label="Footer Navigation">
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="services.html">Services</a>
+              <a href="portfolio.html">Portfolio</a>
+              <a href="contact.html">Contact</a>
+          </nav>
+          <div class="footer-copyright">
+              <p>&copy; 2025 Bayou Websites. All rights reserved.</p>
+          </div>
+      </div>
+  </footer>
 
     <script src="./JavaScript/javascript.js" defer></script>
 </body>
