--- a/services.html
+++ b/services.html
@@ -48,55 +48,79 @@
         </div>
     </header>
 
-
-    <section id="services" class="section" aria-labelledby="services-heading">
-        <div class="container">
-            <h2 id="services-heading" class="section-title">Our Services</h2>
-            <p class="section-description">We offer a range of services tailored to meet the needs of trade businesses, including web design, SEO, and digital marketing.</p>
-            <div class="services-grid">
-                <article class="service-item" aria-labelledby="service-web-design">
-                    <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/web-design.png" alt="web-design"/>
-                    <h3 id="service-web-design" class="service-title">Web Design</h3>
-                    <p class="service-description">Creating visually stunning and user-friendly websites that reflect your brand.</p>
-                </article>
-                <article class="service-item" aria-labelledby="service-seo">
-                    <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/laptop-metrics.png" alt="laptop-metrics"/>
-                    <h3 id="service-seo" class="service-title">SEO</h3>
-                    <p class="service-description">Optimizing your website to improve visibility and drive traffic.</p>
-                </article>
-                <article class="service-item" aria-labelledby="service-digital-marketing">
-                    <img src="./images/icons/digital-marketing.svg" alt="Digital Marketing Icon" class="service-icon">
-                    <h3 id="service-digital-marketing" class="service-title">Digital Marketing</h3>
-                    <p class="service-description">Helping you reach your audience through effective online marketing strategies.</p>
-                </article>
-                <article class="service-item" aria-labelledby="service-branding">
-                    <img src="./images/icons/branding.svg" alt="Branding Icon" class="service-icon">
-                    <h3 id="service-branding" class="service-title">Branding</h3>
-                    <p class="service-description">Developing a cohesive brand identity that resonates with your target audience.</p>
-                </article>
-                <article class="service-item" aria-labelledby="service-content-creation">
-                    <img src="./images/icons/content-creation.svg" alt="Content Creation Icon" class="service-icon">
-                    <h3 id="service-content-creation" class="service-title">Content Creation</h3>
-                    <p class="service-description">Producing high-quality content to engage your audience and enhance your online presence.</p>
-                </article>
-                <article class="service-item" aria-labelledby="service-maintenance">
-                    <img src="./images/icons/maintenance.svg" alt="Website Maintenance Icon" class="service-icon">
-                    <h3 id="service-maintenance" class="service-title">Website Maintenance</h3>
-                    <p class="service-description">Ensuring your website stays updated, secure, and running smoothly.</p>
-                </article>
-                <article class="service-item" aria-labelledby="service-ecommerce">
-                    <img src="./images/icons/ecommerce.svg" alt="E-Commerce Icon" class="service-icon">
-                    <h3 id="service-ecommerce" class="service-title">E-Commerce Solutions</h3>
-                    <p class="service-description">Building robust online stores to help you sell your products and services effectively.</p>
-                </article>
-                <article class="service-item" aria-labelledby="service-analytics">
-                    <img src="./images/icons/analytics.svg" alt="Analytics Icon" class="service-icon">
-                    <h3 id="service-analytics" class="service-title">Analytics & Reporting</h3>
-                    <p class="service-description">Providing insights and data-driven strategies to optimize your online performance.</p>
-                </article>
+        <!-- Services Overview Section -->
+        <section class="services-overview" role="region" aria-labelledby="services-overview-heading">
+            <div class="container">
+            <h2 id="services-overview-heading">Our Services</h2>
+            <p>We offer a range of services to help your business thrive online:</p>
+            <div class="services-list">
+            <div class="service-item" style="border: 5px solid black; padding: 10px;">
+                <img src="https://img.icons8.com/ios-filled/50/000000/code.png" alt="Web Design icon" aria-hidden="true">
+                <h3>Web Design</h3>
+                <p>Custom, responsive designs tailored to your brand.</p>
             </div>
-        </div>
-    </section>
+            <div class="service-item" style="border: 5px solid black; padding: 10px;">
+                <img src="https://img.icons8.com/ios-filled/50/000000/combo-chart.png" alt="SEO Optimization icon" aria-hidden="true">
+                <h3>SEO Optimization</h3>
+                <p>Boost your visibility and attract more customers.</p>
+            </div>
+            <div class="service-item" style="border: 5px solid black; padding: 10px;">
+                <img src="https://img.icons8.com/ios-filled/50/000000/maintenance.png" alt="Maintenance & Support icon" aria-hidden="true">
+                <h3>Maintenance & Support</h3>
+                <p>Reliable support to keep your website running smoothly.</p>
+            </div>
+            <div class="service-item" style="border: 5px solid black; padding: 10px;">
+            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/commercial-development-management.png" alt="commercial-development-management"/>
+            <h3>Social Media Management</h3>
+            <p>Engage your audience and grow your online presence.</p>
+            </div>
+            </div>
+            </div>
+        </section>
+
+        <!-- Why Choose Us Section -->
+        <section class="why-choose-us" role="region" aria-labelledby="why-choose-us-heading">
+            <div class="container">
+            <h2 id="why-choose-us-heading">Why Choose Us?</h2>
+            <p>We are committed to delivering exceptional results for your business. Here's what sets us apart:</p>
+            <ul class="choose-us-list">
+                <li>
+                <strong>Expertise:</strong> Our team has years of experience in web design and digital marketing.
+                </li>
+                <li>
+                <strong>Customization:</strong> We tailor every solution to meet your unique business needs.
+                </li>
+                <li>
+                <strong>Support:</strong> We provide ongoing support to ensure your success.
+                </li>
+                <li>
+                <strong>Results-Driven:</strong> Our focus is on delivering measurable results for your business.
+                </li>
+            </ul>
+            </div>
+        </section>
+
+        <!-- Testimonials Section -->
+        <section class="testimonials" role="region" aria-labelledby="testimonials-heading">
+            <div class="container">
+                <h2 id="testimonials-heading">What Our Clients Say</h2>
+                <div class="testimonials-list">
+                    <div class="testimonial-item">
+                        <p>"Bayou Websites transformed our online presence. Our website is now modern, responsive, and user-friendly!"</p>
+                        <cite>- John D., Local Business Owner</cite>
+                    </div>
+                    <div class="testimonial-item">
+                        <p>"Thanks to their SEO services, our traffic has doubled in just three months. Highly recommend!"</p>
+                        <cite>- Sarah L., Marketing Manager</cite>
+                    </div>
+                    <div class="testimonial-item">
+                        <p>"Their team is incredibly supportive and always available to help. We couldn't be happier!"</p>
+                        <cite>- Mike R., Small Business Owner</cite>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     <style>
         @media (max-width: 768px) {
             .services-grid {
@@ -105,30 +129,27 @@
                 gap: 1.5rem;
             }
         }
-    </style>
 
-    <footer class="footer" role="contentinfo">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <h2>Bayou Websites</h2>
-                <p>Web Development for Blue Collar Businesses</p>
-            </div>
-            <nav class="footer-links" aria-label="Footer Navigation">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="services.html">Services</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-            <div class="footer-contact-info">
-                <p>Email: <a href="mailto:info@bayouwebsites.com" aria-label="Email us at info@bayouwebsites.com">info@bayouwebsites.com</a></p>
-                <p>Phone: <a href="tel:+1234567890" aria-label="Call us at +1 (234) 567-890">+1 (234) 567-890</a></p>
-            </div>
-            <div class="footer-copyright">
-                <p>&copy; 2025 Bayou Websites. All rights reserved.</p>
-            </div>
+    </style>
+    
+<footer class="footer" role="contentinfo">
+    <div class="footer-content">
+        <div class="footer-logo">
+            <h2>Bayou Websites</h2>
+            <p>Web Development for Blue Collar Businesses</p>
         </div>
-    </footer>
+        <nav class="footer-links" aria-label="Footer Navigation">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+        <div class="footer-copyright">
+            <p>&copy; 2025 Bayou Websites. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
 
     <script src="./JavaScript/javascript.js" defer></script>
 </body>
